syntax = "proto3";
package helloworld;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
  rpc StreamData(DataRequest) returns (stream DataResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message DataRequest {
  string message = 1;
}

message DataResponse {
  string data = 1;
}
